design issue fixed for login page where on password field the right overlapping

--- a/scss/auth.scss
+++ b/scss/auth.scss
@@ -356,7 +356,7 @@
 
             input {
                 width: 100%;
-                padding: 14px 46px 14px 16px;
+                padding: 14px 46px 14px 46px;
                 background: rgba(26, 5, 6, 0.4);
                 border: 2px solid rgba(237, 50, 55, 0.2);
                 border-radius: 8px;
@@ -378,7 +378,7 @@
 
             > i {
                 position: absolute;
-                right: 16px;
+                left: 16px;
                 top: 50%;
                 transform: translateY(-50%);
                 color: #888;
